# omni-infer

./: .gitignore  pyproject.toml
tools/: generate_version.py  pyproject.toml
tools/accuracy/: export_moe_accuracy_comparison.py
tools/ansible/: omni_infer_server_used_for_CI.yml  omni_infer_server_used_for_long_term_test.yml
tools/ansible/template/: README.md  omni_infer_inventory_used_for_4P1D.yml  omni_infer_inventory_used_for_8P1D144.yml  omni_infer_inventory_used_for_gptoss_1P1D.yml  omni_infer_inventory_used_for_longcat.yml  omni_infer_server_add_node_template.yml  omni_infer_server_longcat_sglang.yml  omni_infer_server_template.yml  omni_infer_server_template_a3_1machine2p.yml  omni_infer_server_template_a3_dsv32_for_int8.yml  omni_infer_server_template_elastic.yml  omni_infer_server_template_for_ds_8p1d.yml  omni_infer_server_template_for_qwen3_4p1d.yml  omni_infer_server_template_gptoss.yml  omni_infer_server_template_k2.yml  (+1 more)
tools/docker/: Dockerfile.base  Dockerfile.omniinfer  Dockerfile.roma  Dockerfile.sglang  Dockerfile.system  README.md  build_mooncake.sh  build_whl.sh  docker_build_run.sh  start_server.sh
tools/k8s/: README.md  health.sh  omni_kubeinfer.yaml  pre_stop.sh  start.sh
tools/k8s/install/: readme.md  (+3 more)
tools/omni_cli/: main.py  omni_cfg.py  proxy.py  service_check.py
tools/quant/: README.md  kimi_quant.py  quant_deepseek_kimi2.py
tools/scripts/: logging_config.json  logging_config_default.json  pd_ranktable_tools.py  pd_run.sh  pd_run_pangu_ultra_moe.sh  process_logging_config.py  run_model_ds_ocr.py  run_model_ds_ocr.sh  run_model_pangu_chunkprefill.sh  run_model_pangu_chunkprefill_A2.sh  run_model_pangu_tp8_A2.sh  run_offline_ds_ocr.py  run_pangu_vl.sh  run_profile.py  setup_hugetlbfs_2MB.sh  start_api_servers.py
(+696 files in other folders)
