[package]
name = "tokenizers_chunk_ext"
version = "0.1.0"
edition = "2021"

[lib]
name = "tokenizers_chunk_ext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
tokenizers = "0.20"
rayon  = "1.10"

[features]
default = []

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3